<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mountella_trial_bold"
            android:text="@string/login"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@+id/gd_start"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/v_line"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/tv_login_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_login"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@+id/gd_end"
            app:layout_constraintStart_toStartOf="@+id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/v_line"
            app:srcCompat="@drawable/ilu_web_browser" />

        <TextView
            android:id="@+id/tv_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:labelFor="@id/ed_login_email"
            android:text="@string/email"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@+id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/img_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            style="@style/PrimaryTextInputLayout"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/tv_label_email">

            <com.mohfahmi.storyapp.core.utils.EmailEditText
                android:id="@+id/ed_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/sh_cursor_edittext"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_label_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:labelFor="@id/ed_login_password"
            android:text="@string/password"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="@+id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/til_login_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/PrimaryTextInputLayout"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_password"
            app:passwordToggleEnabled="true">

            <com.mohfahmi.storyapp.core.utils.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="@dimen/_40sdp"
                android:textCursorDrawable="@drawable/sh_cursor_edittext"
                tools:ignore="RtlSymmetry" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/primaryButtonStyle"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/primaryButtonStyle"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gd_end"
            app:layout_constraintStart_toStartOf="@+id/gd_start"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0"
            tools:ignore="HardcodedText" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>