...
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="loading">Loading…</string>
    <string name="whoops" translatable="false">Whoops</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="register_successfully">Successfully Registered</string>
    <string name="all_stories">All Stories</string>
    <string name="story_image">Story Image</string>
    <string name="try_again">Try Again</string>
    <string name="back">Back</string>
...
